--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,23 +1,95 @@
+/* =================== GENERAL STYLING =================== */
+
+body{
+    background-color: var(--background-primary);
+}
+
 h1{
     color: var(--primary-text);
-    font-size: 100px;
-    margin: 0 0;
+    font-size: 89px;
+    margin: 0 0 0 0;
+    margin-left: 10px;
 }
 
 h2{
     color: var(--secondary-text);
     font-size: 35px;
     margin: 0 0;
-    width: max-content;
+    margin-left: 10px;
 }
 
-body{
-    background-color: var(--background-primary);
+
+.container{
+    padding-left: 10px;
+} 
+
+/* .container_header__image {
+    margin-top: 90px;
+    height: 319.988px;
+    width: 639.988px;
+} */
+
+
+.grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
-.description__container{
-    display: flex;
-    justify-content: flex-end;
-    margin-left: auto;
-    margin-right: 0;
+nav{
+    margin-top: 80px;
+    text-align: center;
+    color: var(--secondary-text);
+    transition: var(--transition);
+}
+
+.icon{
+    color: ;
+    font-size: 20px;
+}
+
+
+nav a{
+    margin-left: 15px;
+    margin-right: 30px;
+    font-size: 20px;
+}
+
+nav a:hover{
+    color: var(--primary-text);
+    transition: var(--transition);
+    font-size: 25px;
+}
+
+
+@keyframes fadeInLeft {
+    0% {
+       opacity: 0;
+       transform: translateX(-20px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+ }   
+
+.my_name{
+    animation: fadeInLeft 1s;
+}
+
+img{
+    width: 40rem;
+    height: 20rem;
+    margin-top: 80px;
+}
+
+.self__description{
+    position: relative;
+    bottom: 40px;
+    right: 10px;
+    font-size: 70px;
+    margin-top: 140px;
+    animation: fadeInLeft 1s steps;
+    -webkit-animation-delay: 4s;
+    animation-delay: 4000000s;
 }
