--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,9 +1,4 @@
 /* =================== GENERAL STYLING =================== */
-
-body{
-    background-color: var(--background-primary);
-}
-
 h1{
     color: var(--primary-text);
     font-size: 89px;
@@ -44,21 +39,28 @@ nav{
 }
 
 .icon{
-    color: ;
+    color: var(--secondary-text);
     font-size: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    transition: var(--transition);
+}
+
+.icon:hover{
+    color: black;
+    transition: var(--transition);
 }
 
 
 nav a{
-    margin-left: 15px;
-    margin-right: 30px;
+    margin: 0 15px 0 15px;
     font-size: 20px;
 }
 
 nav a:hover{
     color: var(--primary-text);
     transition: var(--transition);
-    font-size: 25px;
+    font-size: black;
 }
 
 
@@ -87,7 +89,7 @@ img{
     position: relative;
     bottom: 40px;
     right: 10px;
-    font-size: 70px;
+    font-size: 65px;
     margin-top: 140px;
     animation: fadeInLeft 1s steps;
     -webkit-animation-delay: 4s;
